# krowkee

./: CMakeLists.txt
include/krowkee/hash/: countsketch.hpp  hash.hpp
playground/: CMakeLists.txt  int128_test.cpp  kpoly_hash_test.cpp
test/: CMakeLists.txt  countsketch_hash_test.cpp  hash_test.cpp
test/include/: check_archive.hpp
